[project]
name = "swe-bench-stress"
version = "0.1.0"
description = "High-concurrency stress testing for E2B sandboxes using real AI agent trajectories from SWE-rebench"
requires-python = ">=3.11"
dependencies = [
    "e2b==2.9.0",
    "datasets>=2.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "aiofiles>=23.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.24.0",
]

[project.scripts]
swe-bench-stress = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
